syntax = "proto3";
package server;
option go_package = "github.com/ryogrid/gord-overlay/server";

import "google/protobuf/empty.proto";
import "server/node.proto";
import "google/api/annotations.proto";

service InternalService {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/server.InternalService/Ping"
    };
  }

  rpc Successors(google.protobuf.Empty) returns (Nodes) {
    option (google.api.http) = {
      post: "/server.InternalService/Successors"
    };
  }
  rpc Predecessor(google.protobuf.Empty) returns (Node) {
    option (google.api.http) = {
      post: "/server.InternalService/Predecessor"
    };
  }

  rpc FindSuccessorByTable(FindRequest) returns (Node) {
    option (google.api.http) = {
      post: "/server.InternalService/FindSuccessorByTable"
    };
  }
  rpc FindSuccessorByList(FindRequest) returns (Node) {
    option (google.api.http) = {
      post: "/server.InternalService/FindSuccessorByList"
    };
  }
  rpc FindClosestPrecedingNode(FindRequest) returns (Node) {
    option (google.api.http) = {
      post: "/server.InternalService/FindClosestPrecedingNode"
    };
  }

  rpc Notify(Node) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/server.InternalService/Notify"
    };
  }

  rpc PutValueInner(PutValueInnerRequest) returns (PutValueInnerResponse) {
    option (google.api.http) = {
      post: "/server.InternalService/PutValueInner"
    };
  }
  rpc GetValueInner(GetValueInnerRequest) returns (GetValueInnerResponse) {
    option (google.api.http) = {
      post: "/server.InternalService/GetValueInner"
    };
  }
  rpc DeleteValueInner(DeleteValueInnerRequest) returns (DeleteValueInnerResponse) {
    option (google.api.http) = {
      post: "/server.InternalService/DeleteValueInner"
    };
  }
}

message Nodes {
  repeated Node nodes = 1;
}

message FindRequest {
  bytes id = 1;
}

message PutValueInnerRequest {
  string key = 1;
  string value = 2;
}

message PutValueInnerResponse {
  bool success = 1;
}

message GetValueInnerRequest {
  string key = 1;
}

message GetValueInnerResponse {
  string value = 1;
  bool success = 2;
}

message DeleteValueInnerRequest {
  string key = 1;
}

message DeleteValueInnerResponse {
  bool success = 1;
}