syntax = "proto3";
package server;
option go_package = "github.com/ryogrid/gord-overlay/server";

import "server/node.proto";
import "google/api/annotations.proto";

service ExternalService {
  rpc FindHostForKey(FindHostRequest) returns (Node) {
    option (google.api.http) = {
      post: "/server.ExternalService/FindHostForKey"
    };
  }
  rpc PutValue(PutValueRequest) returns (PutValueResponse) {
    option (google.api.http) = {
      post: "/server.ExternalService/PutValue"
    };
  }
  rpc GetValue(GetValueRequest) returns (GetValueResponse) {
    option (google.api.http) = {
      post: "/server.ExternalService/GetValue"
    };
  }
  rpc DeleteValue(DeleteValueRequest) returns (DeleteValueResponse) {
    option (google.api.http) = {
      post: "/server.ExternalService/DeleteValue"
    };
  }
}

message FindHostRequest {
  string key = 1;
}

message PutValueRequest {
  string key = 1;
  string value = 2;
}

message PutValueResponse {
  bool success = 1;
}

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 1;
  bool success = 2;
}

message DeleteValueRequest {
  string key = 1;
}

message DeleteValueResponse {
  bool success = 1;
}
